examples/bad/06-NotFunctionCalled.tms
void main () {
  boolean x = true;
  x();
  return;
}